examples/invalid/lexing_ex1.cgl
struct IntVector {
  private {
    int size = 0;
    int capacity = 0;
    int* data = allocate int[1];

    fn resize(int new_capacity) {
      int* new_data = allocate int[new_capacity];
      for (int i = 0; i < size; i++) {
        new_data[i] = data[i];
      }
      data = new_data;
      capacity = new_capacity;
    }
  }

  fn getSize() -> int {
    throw "Index out of bounds" if (size < 0 || size > capacity);
    return size;
  }

  fn push_back(int v) {
    if (size == capacity) {
      resize(if (capacity > 0) capacity * 2 else 1);
    }
    data[size++] = v;
  }

  fn at(int index) -> int {
    return data[index];
  }
  fn set(int index, int value) {
    data[index] = value;
  }

  fn $toString() -> string {
    string result = "[";
    for (int i = 0; i < size; i++) {
      result = result + data[i];
      if (i < size - 1) {
        result = result + ", ";
      }
    }
    result = result + "]";
    return result;
  }
}

// @ is an invalid token
@invalid_token

fn main() -> int {
  IntVector vec = IntVector();
  IntVector vec2 = IntVector();
  for (int i = 0; i < 10; i++) {
    vec.push_back(i);
    vec2.push_back(i * 2);
  }
  println(vec);
  println(vec2);

  // unterminated string
  string badString = "This string is not terminated;

  // illegal character
  int x = 10 # 5;
}

/* expected output:
 * [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 * [0, 2, 4, 6, 8, 10, 12, 14, 16, 18]
 * Index out of bounds
 */
